--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="banner">
+     <div class="banner">
        <div class="banner-content">
           <h3 class="banner-greating">Let's make beautiful flowers a part of your life.</h3>
           <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
@@ -22,10 +22,22 @@
        </div>
        
         <img class="profil-pic" src="images/pngwing 10.png" alt="no img">
-        </div>
+     </div>
     </header>
-    <main>
 
+           <h1 style="text-align: center; background-color: cadetblue;" >FlOWER SHOP NOW</h1>
+
+    <main>
+          <section>
+                <div class="heading">
+                  <div class="section"> 
+                    <h3 class="sele">Hot Deal ! Sale Up To 25% <span class="primary">off</span></h3>
+                    <p class="sele-item">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Shop Now</button>
+                  </div>
+            <img class="pic" src="images/pngwing 8.png" alt="no img">
+            </div>
+          </section>
     </main>
     <footer>
 
