--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
            <h1 style="text-align: center; background-color: cadetblue;" >FlOWER SHOP NOW</h1>
 
     <main>
-          <section>
+          <section class="flowers">
                 <div class="heading">
                   <div class="section"> 
                     <h3 class="sele">Hot Deal ! Sale Up To 25% <span class="primary">off</span></h3>
@@ -37,6 +37,19 @@
                   </div>
             <img class="pic" src="images/pngwing 8.png" alt="no img">
             </div>
+          </section>
+
+          <section>
+             <div class="instagrm">
+                <h3 class="item-title">Instagram</h3>
+                <p class="item-title-drescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+             </div>
+             <div class="images">
+                <img class="flow" src="images/Flower 01.png" alt="no img">
+                <img class="flow" src="images/Rectangle 4.png" alt="no img">
+                <img class="flow" src="images/Rectangle 5.png" alt="no img">
+                <img class="flow" src="images/Rectangle 6.png" alt="no img">
+             </div>
           </section>
     </main>
     <footer>
