added many background

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                 <img class="flow" src="images/Rectangle 6.png" alt="no img">
              </div>
           </section>
+
+          <section class="deals-many">
+
+            <div class="dealer">
+                <h3 class="latest-feals">Get The Latest Deals</h3>
+                <p class="maner">$30 coupon for first shopping</p>
+                <input type="email" placeholder="Enter your email here...."><button class="btn-primary">Subscribe</button>
+            </div>
+          </section>
     </main>
     <footer>
 
