added all aitem

--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
             <div class="dealer">
                 <h3 class="latest-feals">Get The Latest Deals</h3>
                 <p class="maner">$30 coupon for first shopping</p>
-                <input type="email" placeholder="Enter your email here...."><button class="btn-primary">Subscribe</button>
+                <input class="emailhere" type="email" placeholder="Enter your email here...."><button class="btn-primary">Subscribe</button>
             </div>
           </section>
     </main>
     <footer>
-
+          <div class="footer-item">
+            <h3 class="footer-title"><span class="primary">Flower</span><span class="shoper">Shop</span></h3>
+            <p class="footer-atim">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="footer-atimm">@2020-2023, FlowerShop.com. All rights reserved. </p>
+          </div>
     </footer>
 </body>
 </html>
