--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
         <img class="profil-pic" src="images/pngwing 10.png" alt="no img">
      </div>
     </header>
+       <main>
+           <section>
+              <div class="skill">
+                <div class="contact">
+                    <img class="day-delivery" src="images/Group 57.png" width="70px" alt="" ><p class="contact-opsion">Same Day Delivery. Click & Collect.</p>,
+                </div>
+                <div class="contact">
+                    <img class="day-delivery" src="images/Group 58.png" width="70px" alt="" ><p class="contact-opsion">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="contact">
+                    <img class="day-delivery" src="images/Group 59.png" width="70px" alt="" ><p class="contact-opsion">24/7 Free Support.</p>
+                </div>
 
-           <h1 style="text-align: center; background-color: cadetblue;" >FlOWER SHOP NOW</h1>
+                </div>
+           </section>
 
-    <main>
           <section class="flowers">
                 <div class="heading">
                   <div class="section"> 
